--- a/data-raw/qmd_template/Erhardt_ProjectName_yyyymmdd_erik_qmd_template.qmd
+++ b/data-raw/qmd_template/Erhardt_ProjectName_yyyymmdd_erik_qmd_template.qmd
@@ -65,40 +65,40 @@ format:
     link-external-newwindow:  false   # true, false
     link-external-filter:     ^(?:http:|https:)\/\/statacumen\.com
     #html-math-method: katex    # https://quarto.org/docs/output-formats/html-basics.html
-  pdf:                                # Quarto uses KOMA Script document classes by default  https://ctan.org/pkg/koma-script
-    latex-auto-mk: true               # true, false  # run the pdf-engine more than once to generate your PDF
-    #pdf-engine: lualatex
-    #pdf-engine-opt: -outdir=out
-    #include-in-header:
-    #  - text: |
-    #      \usepackage{eplain}
-    #      \usepackage{easy-todo}
-    #  - file: packages.tex
-    #  - macros.tex
-    keep-tex:               true      # keep .tex file that is produced
-    documentclass:          scrartcl  # article, report, book, scrartcl, scrreprt, scrbook
-    papersize:              letter
-    classoption:            [oneside,11pt] # [twocolumn, landscape]
-    geometry:
-      - margin = 1in
-      #- top  = 30mm
-      #- left = 20mm
-      #- heightrounded
-    fontfamily:             libertinus
-    cite-method:            biblatex
-    #biblatexoptions List of options for biblatex
-    #natbiboptions List of options for natbib
-    #biblio-title  Title for bibliography
-    #biblio-style  Style for bibliography
-    toc:                    true
-    toc-depth:              4
-    toc-title:              Contents
-    number-sections:        true
-    number-depth:           5
-    lof:                    true
-    lot:                    true
-    colorlinks:             true
-    highlight-style:        atom-one  # a11y, arrow, atom-one, ayu, breeze, github, gruvbox; pygments, tango, espresso, zenburn, kate, monochrome, breezedark, haddock; dracula, mokokai, nord, oblivion, printing, radical, solarized, vim-dark
+#  pdf:                                # Quarto uses KOMA Script document classes by default  https://ctan.org/pkg/koma-script
+#    latex-auto-mk: true               # true, false  # run the pdf-engine more than once to generate your PDF
+#    #pdf-engine: lualatex
+#    #pdf-engine-opt: -outdir=out
+#    #include-in-header:
+#    #  - text: |
+#    #      \usepackage{eplain}
+#    #      \usepackage{easy-todo}
+#    #  - file: packages.tex
+#    #  - macros.tex
+#    keep-tex:               true      # keep .tex file that is produced
+#    documentclass:          scrartcl  # article, report, book, scrartcl, scrreprt, scrbook
+#    papersize:              letter
+#    classoption:            [oneside,11pt] # [twocolumn, landscape]
+#    geometry:
+#      - margin = 1in
+#      #- top  = 30mm
+#      #- left = 20mm
+#      #- heightrounded
+#    fontfamily:             libertinus
+#    cite-method:            biblatex
+#    #biblatexoptions List of options for biblatex
+#    #natbiboptions List of options for natbib
+#    #biblio-title  Title for bibliography
+#    #biblio-style  Style for bibliography
+#    toc:                    true
+#    toc-depth:              4
+#    toc-title:              Contents
+#    number-sections:        true
+#    number-depth:           5
+#    lof:                    true
+#    lot:                    true
+#    colorlinks:             true
+#    highlight-style:        atom-one  # a11y, arrow, atom-one, ayu, breeze, github, gruvbox; pygments, tango, espresso, zenburn, kate, monochrome, breezedark, haddock; dracula, mokokai, nord, oblivion, printing, radical, solarized, vim-dark
 title-block-style:          default   # plain, none
 title-block-banner:         false     # background color: true, false, "#95b7fc"
 title-block-banner-color:   "#232323" # text color: "#232323"
