--- a/data-raw/qmd_template/Erhardt_ProjectName_yyyymmdd_erik_qmd_template_simple.qmd
+++ b/data-raw/qmd_template/Erhardt_ProjectName_yyyymmdd_erik_qmd_template_simple.qmd
@@ -23,31 +23,31 @@ format:
     code-block-bg:          true
     code-block-border-left: "#30B0E0"
     df-print:               paged     # default, kable, tibble, paged   # https://quarto.org/docs/computations/r.html
-  pdf:                                # Quarto uses KOMA Script document classes by default  https://ctan.org/pkg/koma-script
-    keep-tex:               true      # keep .tex file that is produced
-    documentclass:          scrartcl  # article, report, book, scrartcl, scrreprt, scrbook
-    papersize:              letter
-    classoption:            [oneside,11pt] # [twocolumn, landscape]
-    geometry:
-      - margin = 1in
-      #- top  = 30mm
-      #- left = 20mm
-      #- heightrounded
-    fontfamily:             libertinus
-    cite-method:            biblatex
-    #biblatexoptions List of options for biblatex
-    #natbiboptions List of options for natbib
-    #biblio-title  Title for bibliography
-    #biblio-style  Style for bibliography
-    toc:                    true
-    toc-depth:              4
-    toc-title:              Contents
-    number-sections:        true
-    number-depth:           5
-    lof:                    true
-    lot:                    true
-    colorlinks:             true
-    highlight-style:        atom-one  # a11y, arrow, atom-one, ayu, breeze, github, gruvbox; pygments, tango, espresso, zenburn, kate, monochrome, breezedark, haddock; dracula, mokokai, nord, oblivion, printing, radical, solarized, vim-dark
+#  pdf:                                # Quarto uses KOMA Script document classes by default  https://ctan.org/pkg/koma-script
+#    keep-tex:               true      # keep .tex file that is produced
+#    documentclass:          scrartcl  # article, report, book, scrartcl, scrreprt, scrbook
+#    papersize:              letter
+#    classoption:            [oneside,11pt] # [twocolumn, landscape]
+#    geometry:
+#      - margin = 1in
+#      #- top  = 30mm
+#      #- left = 20mm
+#      #- heightrounded
+#    fontfamily:             libertinus
+#    cite-method:            biblatex
+#    #biblatexoptions List of options for biblatex
+#    #natbiboptions List of options for natbib
+#    #biblio-title  Title for bibliography
+#    #biblio-style  Style for bibliography
+#    toc:                    true
+#    toc-depth:              4
+#    toc-title:              Contents
+#    number-sections:        true
+#    number-depth:           5
+#    lof:                    true
+#    lot:                    true
+#    colorlinks:             true
+#    highlight-style:        atom-one  # a11y, arrow, atom-one, ayu, breeze, github, gruvbox; pygments, tango, espresso, zenburn, kate, monochrome, breezedark, haddock; dracula, mokokai, nord, oblivion, printing, radical, solarized, vim-dark
 fig-width:                  6
 fig-height:                 4
 execute: # https://quarto.org/docs/computations/execution-options.html, https://quarto.org/docs/computations/r.html
